syntax = "proto3";

package gateway.api.v1.user.follow;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "vw_gateway/api/v1/user/follow;followv1";

service Follow {
    rpc FollowUser(FollowUserReq) returns (FollowUserResp) {
        option (google.api.http) = {
            post: "/api/v1/{user_id}/follow",
            body: "*",
        };
    }

    rpc UnfollowUser(UnfollowUserReq) returns (UnfollowUserResp) {
        option (google.api.http) = {
            put: "/api/v1/{user_id}/follow",
            body: "*",
        };
    }

    rpc GetFolloweeInfo(GetFolloweeInfoReq) returns (GetFolloweeInfoResp) {
        option (google.api.http) = {
            get: "/api/v1/{user_id}/followList",
        };
    }
}

message FollowUserReq {
    int64 user_id          = 1;
    int64 follower_user_id = 2;
    int64 follow_list_id   = 3;
}
message FollowUserResp {
    int32 status_code = 1;
    string message    = 2;
}

message UnfollowUserReq {
    int64 user_id          = 1;
    int64 followed_user_id = 2;
}
message UnfollowUserResp {
    int32 status_code = 1;
    string message    = 2;
}

message GetFolloweeInfoReq {
    int64 user_id        = 1;
    int64 follow_list_id = 2;
    int32 page_num       = 3;
    int32 page_size      = 4;
}
message GetFolloweeInfoResp {
    int32 status_code = 1;
    string message    = 2;
    message UserSummary {
        string username                    = 1;
        string avatar_path                 = 2;
        int32 gender                       = 3;
        string signature                   = 4;
        string email                       = 5;
        google.protobuf.Timestamp birthday = 6;
    }
    repeated UserSummary followee_info = 3;
}